fixed text overlap on smaller screens

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -86,7 +86,8 @@ body{
   .line-two,
   .line-three{
     width: 100%;
-    height: 70px;
+    min-height: 70px;
+    max-height: 140px;
     font-weight: 600;
   }
 
